--- a/01/index.html
+++ b/01/index.html
@@ -24,7 +24,12 @@
             /* filter: brightness(100%); */
             /* filter: contrast(100%); */
             /* filter: drop-shadow(30px 30px 7px green); */
-            filter: grayscale(70%);
+            /* filter: grayscale(70%); */
+            /* filter:hue-rotate(700deg) */
+            /* filter:invert(20%) */
+            /* filter:opacity(50%) */
+            /* filter:saturate(100%) */
+            filter:blur(2px) sepia(50%) brightness(200%)
         }
     </style>
 </head>
